--- a/piskvorky/public/styless.css
+++ b/piskvorky/public/styless.css
@@ -14,7 +14,7 @@ body {
 .cell {
     width: 100px;
     height: 100px;
-    background-color: #f0f0f0;
+    background-color: #2e1475;
     display: flex;
     align-items: center;
     justify-content: center;
